--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>ถึงโบว์ เจ้าหญิงของเค้า 👑💖</title>
+<title>โบว์รักพี่ไหม 👑💖</title>
 
 <style>
 
@@ -17,6 +17,7 @@ body{
     align-items:center;
     height:100vh;
     overflow:hidden;
+    text-align:center;
 }
 
 /* กล่อง */
@@ -24,73 +25,47 @@ body{
     background:white;
     padding:30px;
     border-radius:30px;
-    text-align:center;
     box-shadow:0 15px 40px rgba(255,105,180,0.4);
-    max-width:350px;
+    width:320px;
     position:relative;
 }
 
-.crown{
-    font-size:30px;
-    position:absolute;
-    top:-20px;
-    left:50%;
-    transform:translateX(-50%);
-}
-
-.photo{
-    width:230px;
-    border-radius:20px;
-    border:5px solid #fff;
-    box-shadow:0 10px 25px rgba(255,105,180,0.5);
-    margin-bottom:15px;
-}
-
+/* ปุ่ม */
 button{
     background:linear-gradient(45deg,#ff4f8b,#ff7aa8);
     border:none;
     color:white;
     padding:12px 22px;
     border-radius:25px;
-    font-size:16px;
+    font-size:18px;
     cursor:pointer;
     margin:10px;
     box-shadow:0 5px 15px rgba(255,105,180,0.4);
 }
 
+/* ปุ่มรักหนี */
+#loveBtn{
+    position:absolute;
+    left:40px;
+    top:150px;
+    transition:0.2s;
+}
+
 /* ปุ่มไม่รัก */
 #noBtn{
     position:absolute;
-    left:120px;
-    top:240px;
-    transition:0.3s;
+    right:40px;
+    top:150px;
 }
 
 /* countdown */
 #countdown{
-    position:fixed;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    font-size:80px;
-    color:white;
+    font-size:70px;
+    color:#ff4f8b;
     font-weight:bold;
-    display:none;
-    text-shadow:0 0 20px rgba(0,0,0,0.4);
 }
 
-/* หัวใจลอย */
-.heart{
-    position:fixed;
-    top:-10px;
-    animation:fall linear infinite;
-}
-
-@keyframes fall{
-    to{ transform:translateY(110vh); }
-}
-
-/* หัวใจระเบิด */
+/* หัวใจ */
 .bigHeart{
     position:fixed;
     font-size:30px;
@@ -105,28 +80,22 @@ button{
 </style>
 </head>
 
-<body onclick="firstTouch()">
+<body onclick="startApp()">
 
-<div class="container" id="content" style="display:none;">
+<div class="container">
 
-<div class="crown">👑</div>
+<h2>รอแป๊บนะ 💖</h2>
 
-<img src="bow.jpg" class="photo">
+<div id="countdown">10</div>
 
-<h2>สุขสันต์วันวาเลนไทน์นะ โบว์ 💖</h2>
-
-<p>เค้ารักโบว์ที่สุดในโลกเลยนะ 💕</p>
-
-<input type="text" id="answer" placeholder="พิมพ์คำตอบตรงนี้">
-
-<br>
+<div id="buttons" style="display:none; position:relative; height:220px;">
 
 <button id="loveBtn">รัก 💖</button>
 <button id="noBtn">ไม่รัก 😝</button>
 
 </div>
 
-<div id="countdown">10</div>
+</div>
 
 <audio id="music" src="music.mp3" preload="auto"></audio>
 
@@ -135,95 +104,85 @@ button{
 const music = document.getElementById("music");
 const loveBtn = document.getElementById("loveBtn");
 const noBtn = document.getElementById("noBtn");
-const input = document.getElementById("answer");
+const buttons = document.getElementById("buttons");
 
+let started = false;
 let speed = 1;
 
-/* แตะหน้าจอครั้งแรก */
-function firstTouch(){
-    document.getElementById("content").style.display="block";
-    music.play().catch(()=>{});
+/* เริ่ม */
+function startApp(){
+
+if(started) return;
+started = true;
+
+music.play().catch(()=>{});
+
+let time = 10;
+const cd = document.getElementById("countdown");
+
+const timer = setInterval(()=>{
+
+time--;
+cd.innerText = time;
+
+if(time <= 0){
+
+clearInterval(timer);
+
+cd.style.display = "none";
+buttons.style.display = "block";
+
 }
 
-/* ปุ่มไม่รัก หนีเร็วขึ้นเรื่อย ๆ */
+},1000);
+
+}
+
+/* ปุ่มรักหนี */
+loveBtn.addEventListener("mouseover", moveLove);
+loveBtn.addEventListener("click", moveLove);
+
+function moveLove(){
+
+const x = Math.random() * (window.innerWidth - 120);
+const y = Math.random() * (window.innerHeight - 80);
+
+speed += 0.4;
+
+loveBtn.style.transition = 0.3 / speed + "s";
+loveBtn.style.left = x + "px";
+loveBtn.style.top = y + "px";
+
+}
+
+/* ปุ่มไม่รัก */
 noBtn.onclick = () => {
 
-    const x = Math.random() * (window.innerWidth - 120);
-    const y = Math.random() * (window.innerHeight - 80);
+explodeHearts();
 
-    noBtn.style.left = x + "px";
-    noBtn.style.top = y + "px";
-
-    speed += 0.4;
-    noBtn.style.transition = (0.3 / speed) + "s";
-};
-
-/* ปุ่มรัก */
-loveBtn.onclick = () => {
-
-    music.play().catch(()=>{});
-
-    loveBtn.disabled = true;
-    noBtn.disabled = true;
-
-    const countdownEl = document.getElementById("countdown");
-
-    let timeLeft = 10;
-    countdownEl.style.display = "block";
-    countdownEl.innerText = timeLeft;
-
-    const timer = setInterval(() => {
-
-        timeLeft--;
-        countdownEl.innerText = timeLeft;
-
-        if(timeLeft <= 0){
-            clearInterval(timer);
-
-            countdownEl.style.display = "none";
-
-            explodeHearts();
-
-            alert("ครบ 10 วินาทีแล้ว 💖 รู้แล้วว่ารัก");
-        }
-
-    }, 1000);
-};
-
-/* หัวใจระเบิด */
-function explodeHearts(){
-
-    for(let i=0;i<40;i++){
-
-        let heart=document.createElement("div");
-        heart.className="bigHeart";
-        heart.innerHTML="💖";
-
-        heart.style.left=Math.random()*100+"vw";
-        heart.style.top=Math.random()*100+"vh";
-
-        document.body.appendChild(heart);
-
-        setTimeout(()=>heart.remove(),1000);
-    }
+alert("ไม่รักจริงหรอ 😭");
 
 }
 
-/* หัวใจลอย */
-setInterval(()=>{
-    let heart=document.createElement("div");
-    heart.className="heart";
-    heart.innerHTML="💗";
+/* หัวใจ */
+function explodeHearts(){
 
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.fontSize=(Math.random()*20+15)+"px";
-    heart.style.animationDuration=(Math.random()*3+2)+"s";
+for(let i=0;i<40;i++){
 
-    document.body.appendChild(heart);
+let heart=document.createElement("div");
+heart.className="bigHeart";
+heart.innerHTML="💖";
 
-    setTimeout(()=>heart.remove(),5000);
+heart.style.left=Math.random()*100+"vw";
+heart.style.top=Math.random()*100+"vh";
 
-},300);
+document.body.appendChild(heart);
+
+setTimeout(()=>heart.remove(),1000);
+
+}
+
+}
 
 </script>
 
