--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ body{
     box-shadow:0 15px 40px rgba(255,105,180,0.4);
     max-width:350px;
     position:relative;
+    display:none;
 }
 
 .crown{
@@ -56,31 +57,20 @@ button{
     cursor:pointer;
     margin:10px;
     box-shadow:0 5px 15px rgba(255,105,180,0.4);
+    position:relative;
 }
 
 #noBtn{
     position:absolute;
+    animation:shake 0.2s infinite;
 }
 
-.heart{
-    position:fixed;
-    top:-10px;
-    animation:fall linear infinite;
-}
-
-@keyframes fall{
-    to{ transform:translateY(110vh); }
-}
-
-.bigHeart{
-    position:fixed;
-    font-size:30px;
-    animation:boom 1s linear forwards;
-}
-
-@keyframes boom{
-    from{transform:scale(0);opacity:1;}
-    to{transform:scale(3);opacity:0;}
+@keyframes shake{
+    0%{transform:translate(1px,1px);}
+    25%{transform:translate(-1px,2px);}
+    50%{transform:translate(-3px,1px);}
+    75%{transform:translate(2px,-1px);}
+    100%{transform:translate(1px,-2px);}
 }
 
 /* countdown */
@@ -92,16 +82,29 @@ button{
     font-size:80px;
     color:white;
     font-weight:bold;
-    display:none;
     text-shadow:0 0 20px rgba(0,0,0,0.4);
+}
+
+/* หัวใจ */
+.bigHeart{
+    position:fixed;
+    font-size:30px;
+    animation:boom 1s linear forwards;
+}
+
+@keyframes boom{
+    from{transform:scale(0);opacity:1;}
+    to{transform:scale(3);opacity:0;}
 }
 
 </style>
 </head>
 
-<body onclick="firstTouch()">
+<body>
 
-<div class="container" id="content" style="display:none;">
+<div id="countdown">20</div>
+
+<div class="container" id="content">
 
 <div class="crown">👑</div>
 
@@ -111,135 +114,88 @@ button{
 
 <p>เค้ารักโบว์ที่สุดในโลกเลยนะ 💕</p>
 
-<input type="text" id="answer" placeholder="พิมพ์คำตอบตรงนี้">
-
-<br>
-
 <button id="loveBtn">รัก 💖</button>
 <button id="noBtn">ไม่รัก 😝</button>
 
 </div>
 
-<div id="countdown">10</div>
-
 <audio id="music" src="music.mp3" preload="auto"></audio>
 
-<!-- Firebase -->
-<script type="module">
+<script>
 
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
-
-const firebaseConfig = {
-  apiKey: "YOUR_KEY",
-  authDomain: "YOUR_DOMAIN",
-  databaseURL: "YOUR_DB_URL",
-  projectId: "YOUR_ID",
-  storageBucket: "YOUR_BUCKET",
-  messagingSenderId: "YOUR_MSG_ID",
-  appId: "YOUR_APP_ID"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getDatabase(app);
-
+const countdownEl = document.getElementById("countdown");
+const content = document.getElementById("content");
 const music = document.getElementById("music");
+
 const loveBtn = document.getElementById("loveBtn");
 const noBtn = document.getElementById("noBtn");
-const input = document.getElementById("answer");
 
+let time = 20;
 let noSpeed = 1;
 
-/* แตะหน้าจอครั้งแรก */
-window.firstTouch = function(){
-    document.getElementById("content").style.display="block";
-    music.play().catch(()=>{});
-}
+/* countdown 20 วิ */
+const timer = setInterval(()=>{
 
-/* ปุ่มไม่รัก หนีเร็วขึ้น */
-noBtn.onclick = () => {
+    time--;
+    countdownEl.innerText = time;
 
-    const x = Math.random() * (window.innerWidth - 100);
-    const y = Math.random() * (window.innerHeight - 50);
+    if(time<=0){
+        clearInterval(timer);
+
+        countdownEl.style.display="none";
+        content.style.display="block";
+
+        music.play().catch(()=>{});
+
+        moveNoBtn();
+    }
+
+},1000);
+
+/* ปุ่มไม่รัก หนี */
+function moveNoBtn(){
+
+    const x = Math.random() * (window.innerWidth - 120);
+    const y = Math.random() * (window.innerHeight - 80);
 
     noBtn.style.left = x + "px";
     noBtn.style.top = y + "px";
 
-    noSpeed += 0.5;
-    noBtn.style.transition = 0.2 / noSpeed + "s";
-};
+    noSpeed += 0.4;
+    noBtn.style.transition = 0.3 / noSpeed + "s";
+}
+
+noBtn.addEventListener("mouseover", moveNoBtn);
+noBtn.addEventListener("click", moveNoBtn);
 
 /* ปุ่มรัก */
 loveBtn.onclick = () => {
 
-    music.play().catch(()=>{});
+    explodeHearts();
 
-    loveBtn.disabled = true;
-    noBtn.disabled = true;
+    alert("💖 รักนะคะ มายด์พินเซต ของพี่ 💖");
 
-    const countdownEl = document.getElementById("countdown");
-
-    let timeLeft = 10;
-    countdownEl.style.display = "block";
-    countdownEl.innerText = timeLeft;
-
-    const timer = setInterval(() => {
-
-        timeLeft--;
-        countdownEl.innerText = timeLeft;
-
-        if(timeLeft <= 0){
-            clearInterval(timer);
-
-            countdownEl.style.display = "none";
-
-            for(let i=0;i<40;i++){
-                setTimeout(createHeart, i*80);
-            }
-
-            const text = input.value || "รัก";
-
-            push(ref(db, "answers"), {
-                text: text,
-                time: Date.now()
-            });
-
-            alert("ครบ 10 วินาทีแล้ว 💖 รู้แล้วว่ารัก");
-        }
-
-    }, 1000);
 };
 
-/* สร้างหัวใจ */
-function createHeart(){
+/* หัวใจ */
+function explodeHearts(){
 
-    let heart=document.createElement("div");
-    heart.className="bigHeart";
-    heart.innerHTML="💖";
+    for(let i=0;i<40;i++){
 
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.top=Math.random()*100+"vh";
+        let heart=document.createElement("div");
+        heart.className="bigHeart";
+        heart.innerHTML="💖";
 
-    document.body.appendChild(heart);
+        heart.style.left=Math.random()*100+"vw";
+        heart.style.top=Math.random()*100+"vh";
 
-    setTimeout(()=>heart.remove(),1000);
+        document.body.appendChild(heart);
+
+        setTimeout(()=>heart.remove(),1000);
+
+    }
+
 }
-
-/* หัวใจลอย */
-setInterval(()=>{
-    let heart=document.createElement("div");
-    heart.className="heart";
-    heart.innerHTML="💗";
-
-    heart.style.left=Math.random()*100+"vw";
-    heart.style.fontSize=(Math.random()*20+15)+"px";
-    heart.style.animationDuration=(Math.random()*3+2)+"s";
-
-    document.body.appendChild(heart);
-
-    setTimeout(()=>heart.remove(),5000);
-
-},300);
 
 </script>
 
