--- a/index.html
+++ b/index.html
@@ -3,268 +3,222 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<title>ถึงโบว์ เจ้าหญิงของเค้า 👑💖</title>
+<title>Valentine 💖</title>
 
 <style>
-
-body{
-    margin:0;
-    font-family: Arial, sans-serif;
-    background: linear-gradient(135deg,#ff9ec4,#ffcce0);
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    height:100vh;
-    overflow:hidden;
+body {
+    font-family: "Prompt", sans-serif;
+    background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+    margin: 0;
+    overflow: hidden;
+    text-align: center;
+    color: #fff;
 }
 
-/* กล่อง */
-.container{
-    background:white;
-    padding:30px;
-    border-radius:30px;
-    text-align:center;
-    box-shadow:0 15px 40px rgba(255,105,180,0.4);
-    max-width:350px;
-    position:relative;
-    display:none;
+/* หน้าโหลด */
+#loading {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: #ff6b81;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 40px;
+    z-index: 10;
 }
 
-.photo{
-    width:230px;
-    border-radius:20px;
-    border:5px solid #fff;
-    margin-bottom:15px;
+/* เนื้อหาหลัก */
+#content {
+    display: none;
+    padding-top: 40px;
+}
+
+img {
+    width: 250px;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.3);
+}
+
+/* คำถาม */
+#question {
+    font-size: 28px;
+    margin: 20px 0;
 }
 
 /* ปุ่ม */
-button{
-    background:linear-gradient(45deg,#ff4f8b,#ff7aa8);
-    border:none;
-    color:white;
-    padding:12px 22px;
-    border-radius:25px;
-    font-size:16px;
-    cursor:pointer;
-    margin:10px;
+button {
+    padding: 15px 25px;
+    font-size: 20px;
+    border: none;
+    border-radius: 15px;
+    margin: 15px;
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+#loveBtn {
+    background: #ff4d6d;
+    color: white;
+}
+
+#noLoveBtn {
+    background: #555;
+    color: white;
+    position: fixed;   /* แก้ให้ไม่หาย */
+    left: 60%;
+    top: 70%;
+}
+
+/* สั่น */
+@keyframes shake {
+    0% { transform: translate(2px, 2px); }
+    25% { transform: translate(-2px, -2px); }
+    50% { transform: translate(2px, -2px); }
+    75% { transform: translate(-2px, 2px); }
+    100% { transform: translate(2px, 2px); }
+}
+
+.shake {
+    animation: shake 0.2s infinite;
+}
+
+/* กล่องข้อความ */
+#message {
+    font-size: 22px;
+    margin-top: 20px;
+    display: none;
 }
 
 /* ปุ่มเพลง */
-#musicBtn{
-    position:fixed;
-    bottom:20px;
-    right:20px;
-    font-size:14px;
-    padding:10px 15px;
-    border-radius:20px;
+#musicControl {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: white;
+    color: black;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    font-size: 25px;
 }
-
-/* countdown */
-#countdown{
-    position:fixed;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    font-size:90px;
-    color:white;
-    font-weight:bold;
-}
-
-/* ปุ่มไม่รัก */
-#noBtn{
-    position:absolute;
-    animation:shake 0.25s infinite;
-}
-
-@keyframes shake{
-    0%{transform:translate(1px,1px);}
-    50%{transform:translate(-2px,2px);}
-    100%{transform:translate(1px,-2px);}
-}
-
-.bigHeart{
-    position:fixed;
-    font-size:30px;
-    animation:boom 1s linear forwards;
-}
-
-@keyframes boom{
-    from{transform:scale(0);opacity:1;}
-    to{transform:scale(3);opacity:0;}
-}
-
-#msg{
-    margin-top:15px;
-    color:#ff4f8b;
-    font-weight:bold;
-}
-
 </style>
 </head>
 
-<body onclick="startApp()">
+<body>
 
-<div id="countdown">20</div>
-
-<div class="container" id="content">
-
-<img src="bow.jpg" class="photo">
-
-<h2>สุขสันต์วันวาเลนไทน์นะ 💖</h2>
-
-<button id="loveBtn">รัก 💖</button>
-<button id="noBtn">ไม่รัก 😝</button>
-
-<div id="msg"></div>
-
+<!-- หน้าโหลด -->
+<div id="loading">
+    ⏳ กรุณารอสักครู่... <br>
+    <span id="count">20</span>
 </div>
 
-<button id="musicBtn">🎵 เปิดเพลง</button>
+<!-- เนื้อหา -->
+<div id="content">
+    <h1>💖 สำหรับคนพิเศษ 💖</h1>
 
-<audio id="music" src="music.mp3" preload="auto" loop></audio>
+    <img src="photo.jpg" alt="แฟน">
+
+    <div id="question">รักพี่ไหม? 💕</div>
+
+    <div>
+        <button id="loveBtn">รัก 💕</button>
+        <button id="noLoveBtn">ไม่รัก 😝</button>
+    </div>
+
+    <div id="message"></div>
+</div>
+
+<!-- เพลง -->
+<audio id="bgMusic" loop>
+    <source src="music.mp3" type="audio/mpeg">
+</audio>
+
+<!-- เสียงพูด -->
+<audio id="loveSound">
+    <source src="love.mp3" type="audio/mpeg">
+</audio>
+
+<button id="musicControl">🎵</button>
 
 <script>
 
-let started=false;
-let time=20;
+///// นับถอยหลังหน้าโหลด
+let time = 20;
+let countEl = document.getElementById("count");
 
-const music=document.getElementById("music");
-const musicBtn=document.getElementById("musicBtn");
+let timer = setInterval(() => {
+    time--;
+    countEl.innerText = time;
 
-const countdown=document.getElementById("countdown");
-const content=document.getElementById("content");
+    if (time <= 0) {
+        clearInterval(timer);
+        document.getElementById("loading").style.display = "none";
+        document.getElementById("content").style.display = "block";
 
-const loveBtn=document.getElementById("loveBtn");
-const noBtn=document.getElementById("noBtn");
-
-let speed=1;
-
-
-/* =========================
-   ฟังก์ชันเล่นเพลง (เสถียร)
-========================= */
-
-function playMusic(){
-
-    music.volume = 1;
-
-    const playPromise = music.play();
-
-    if(playPromise !== undefined){
-        playPromise.catch(()=>{
-            console.log("ต้องกดก่อนถึงจะเล่น");
-        });
+        startNoLoveMove();
     }
+}, 1000);
+
+
+///// ปุ่มไม่รักเด้ง + สั่น
+const noBtn = document.getElementById("noLoveBtn");
+
+function moveButton() {
+    let x = Math.random() * (window.innerWidth - 120);
+    let y = Math.random() * (window.innerHeight - 80);
+
+    noBtn.style.left = x + "px";
+    noBtn.style.top = y + "px";
+}
+
+function startNoLoveMove() {
+    noBtn.classList.add("shake");
+
+    noBtn.addEventListener("mouseover", moveButton);
+    noBtn.addEventListener("click", moveButton);
 }
 
 
-/* =========================
-   เริ่มเว็บ
-========================= */
+///// ปุ่มรัก
+const loveBtn = document.getElementById("loveBtn");
+const message = document.getElementById("message");
+const loveSound = document.getElementById("loveSound");
 
-function startApp(){
+loveBtn.onclick = () => {
 
-if(started) return;
-started=true;
+    loveSound.currentTime = 0;
+    loveSound.play();
 
-playMusic();
-
-let timer=setInterval(()=>{
-
-time--;
-countdown.innerText=time;
-
-if(time<=0){
-
-clearInterval(timer);
-
-countdown.style.display="none";
-content.style.display="block";
-
-moveNo();
-
-}
-
-},1000);
-
-}
+    message.style.display = "block";
+    message.innerHTML = `
+    💕 รักนะคะ มายด์พินเซต ของพี่ 💕<br><br>
+    ขอให้หนูมีความสุขในทุกวันเลยนะ<br>
+    อยู่ข้างพี่แบบนี้ไปนาน ๆ เลย<br>
+    พี่จะดูแลหนูให้ดีที่สุดเท่าที่พี่จะทำได้<br>
+    หนูคือรอยยิ้มของพี่เสมอ ❤️
+    `;
+};
 
 
-/* =========================
-   ปุ่มเปิดเพลง
-========================= */
+///// เพลงพื้นหลัง
+const music = document.getElementById("bgMusic");
+const musicBtn = document.getElementById("musicControl");
 
-musicBtn.onclick=playMusic;
+let playing = false;
 
-
-/* =========================
-   กลับเข้าเว็บหลังโทรศัพท์
-========================= */
-
-document.addEventListener("visibilitychange",()=>{
-
-if(!document.hidden){
-playMusic();
-}
-
-});
-
-window.addEventListener("focus",()=>{
-
-playMusic();
-
-});
-
-
-/* =========================
-   ปุ่มไม่รักหนี
-========================= */
-
-noBtn.addEventListener("mouseover",moveNo);
-noBtn.addEventListener("click",moveNo);
-
-function moveNo(){
-
-const x=Math.random()*(window.innerWidth-120);
-const y=Math.random()*(window.innerHeight-80);
-
-speed+=0.4;
-
-noBtn.style.transition=0.25/speed+"s";
-noBtn.style.left=x+"px";
-noBtn.style.top=y+"px";
-
-}
-
-
-/* =========================
-   ปุ่มรัก
-========================= */
-
-loveBtn.onclick=()=>{
-
-playMusic();
-
-document.getElementById("msg").innerHTML=
-"💖 รักนะคะ มายด์พินเซตของพี่ 💕<br>ขอบคุณที่เข้ามาเป็นความสุขของพี่นะ 🥰";
-
-for(let i=0;i<40;i++){
-
-let heart=document.createElement("div");
-heart.className="bigHeart";
-heart.innerHTML="💖";
-
-heart.style.left=Math.random()*100+"vw";
-heart.style.top=Math.random()*100+"vh";
-
-document.body.appendChild(heart);
-
-setTimeout(()=>heart.remove(),1000);
-
-}
-
-}
+musicBtn.onclick = () => {
+    if (!playing) {
+        music.play();
+        musicBtn.innerText = "🔊";
+        playing = true;
+    } else {
+        music.pause();
+        musicBtn.innerText = "🎵";
+        playing = false;
+    }
+};
 
 </script>
 
