--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ button {
 #noLoveBtn {
     background: #555;
     color: white;
-    position: fixed;   /* แก้ให้ไม่หาย */
+    position: fixed;
     left: 60%;
     top: 70%;
 }
@@ -84,11 +84,16 @@ button {
     animation: shake 0.2s infinite;
 }
 
-/* กล่องข้อความ */
+/* กล่องข้อความ (แก้ให้เลื่อนได้) */
 #message {
     font-size: 22px;
     margin-top: 20px;
     display: none;
+    max-height: 200px;
+    overflow-y: auto;
+    padding: 10px;
+    background: rgba(255,255,255,0.2);
+    border-radius: 15px;
 }
 
 /* ปุ่มเพลง */
@@ -197,7 +202,8 @@ loveBtn.onclick = () => {
     ขอให้หนูมีความสุขในทุกวันเลยนะ<br>
     อยู่ข้างพี่แบบนี้ไปนาน ๆ เลย<br>
     พี่จะดูแลหนูให้ดีที่สุดเท่าที่พี่จะทำได้<br>
-    หนูคือรอยยิ้มของพี่เสมอ ❤️
+    หนูคือรอยยิ้มของพี่เสมอ ❤️<br><br>
+    และไม่ว่าวันไหนจะดีหรือร้าย พี่ก็จะอยู่ข้างหนูเสมอ 🤍
     `;
 };
 
